--- a/build.gradle
+++ b/build.gradle
@@ -29,14 +29,19 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // Validator
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     // Spring Security
     implementation 'org.springframework.boot:spring-boot-starter-security'
     testImplementation 'org.springframework.security:spring-security-test'
 
-    // MySQL
+    // DB
     runtimeOnly 'com.mysql:mysql-connector-j'
+    runtimeOnly 'com.h2database:h2'
 
     // JWT
     compileOnly('org.springframework.boot:spring-boot-starter-web')
