--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     compileOnly('org.springframework.boot:spring-boot-starter-web')
     compileOnly('io.jsonwebtoken:jjwt-api:0.11.1')
     runtimeOnly('io.jsonwebtoken:jjwt-impl:0.11.1', 'io.jsonwebtoken:jjwt-jackson:0.11.1')
+    testImplementation('io.jsonwebtoken:jjwt-api:0.11.1')
 }
 
 tasks.named('test') {
